tests/ui/lang-items/start_lang_item_args.argv.stderr
error: parameter 3 of the `start` lang item is incorrect
  --> $DIR/start_lang_item_args.rs:89:52
   |
LL | fn start<T>(_main: fn() -> T, _argc: isize, _argv: u8, _sigpipe: u8) -> isize {
   |                                                    ^^ help: change the type from `u8` to `*const *const u8`

error: aborting due to previous error

